--- a/ansible_collections/arista/avd/molecule/eos_validate_state/custom_anta_catalogs/dc1-leaf1a.yml
+++ b/ansible_collections/arista/avd/molecule/eos_validate_state/custom_anta_catalogs/dc1-leaf1a.yml
@@ -20,3 +20,6 @@ anta.tests.vxlan:
       vteps:
         - 10.1.1.5
         - 10.1.1.6
+  - VerifyVxlan1ConnSettings:
+      source_interface: Loopback1
+      udp_port: 4789
