--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -313,27 +313,30 @@ interface Loopback0
    ip address 192.168.42.1/32
 !
 interface Tunnel100
+   description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
    mtu 1394
-   ip address 1.1.1.1/24
+   ip address unnumbered Ethernet3
    tunnel mode ipsec
    tunnel source interface Ethernet3
-   tunnel destination 42.42.42.42
+   tunnel destination 10.37.121.1
    tunnel ipsec profile ZSCALER-IPSEC-PROFILE
 !
 interface Tunnel101
+   description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
    mtu 1394
-   ip address 1.1.1.1/24
+   ip address unnumbered Ethernet3
    tunnel mode ipsec
    tunnel source interface Ethernet3
-   tunnel destination 42.42.42.42
+   tunnel destination 10.39.77.1
    tunnel ipsec profile ZSCALER-IPSEC-PROFILE
 !
 interface Tunnel102
+   description Internet Exit ZSCALER-EXIT-POLICY-1 TER
    mtu 1394
-   ip address 1.1.1.1/24
+   ip address unnumbered Ethernet3
    tunnel mode ipsec
    tunnel source interface Ethernet3
-   tunnel destination 42.42.42.42
+   tunnel destination 10.50.9.1
    tunnel ipsec profile ZSCALER-IPSEC-PROFILE
 !
 interface Vxlan1
@@ -391,30 +394,30 @@ application traffic recognition
       42
 !
 monitor connectivity
-   interface set ZSTunnel100 Tunnel100
-   interface set ZSTunnel101 Tunnel101
-   interface set ZSTunnel102 Tunnel102
+   interface set SET-Tunnel100 Tunnel100
+   interface set SET-Tunnel101 Tunnel101
+   interface set SET-Tunnel102 Tunnel102
    !
-   host ZSTunnel100
+   host IE-Tunnel100
       description
-      Zscaler tunnel
-      local-interfaces ZSTunnel100 address-only
-      ip 172.20.20.21/31
-      url http://TODO
+      Internet Exit ZSCALER-EXIT-POLICY-1 PRI
+      local-interfaces SET-Tunnel100
+      ip 10.37.121.1
+      url http://gateway.zscalerbeta.net/vpntest
    !
-   host ZSTunnel101
+   host IE-Tunnel101
       description
-      Zscaler tunnel
-      local-interfaces ZSTunnel101 address-only
-      ip 172.20.20.21/31
-      url http://TODO
+      Internet Exit ZSCALER-EXIT-POLICY-1 SEC
+      local-interfaces SET-Tunnel101
+      ip 10.39.77.1
+      url http://gateway.zscalerbeta.net/vpntest
    !
-   host ZSTunnel102
+   host IE-Tunnel102
       description
-      Zscaler tunnel
-      local-interfaces ZSTunnel102 address-only
-      ip 172.20.20.21/31
-      url http://TODO
+      Internet Exit ZSCALER-EXIT-POLICY-1 TER
+      local-interfaces SET-Tunnel102
+      ip 10.50.9.1
+      url http://gateway.zscalerbeta.net/vpntest
 !
 ip routing
 ip routing vrf ATTRACTED-VRF-FROM-UPLINK
