Feat: Add ip_nat and access-list

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge.cfg
@@ -16,6 +16,10 @@ service routing protocols model multi-agent
 !
 ip as-path access-list ASPATH-WAN permit 65000 any
 !
+!
+ip nat profile VRF-AWARE-NAT
+   ip nat source dynamic access-list ALLOW_ALL pool PORT_ONLY_POOL
+!
 hostname cv-pathfinder-edge
 !
 router adaptive-virtual-topology
@@ -419,6 +423,9 @@ monitor connectivity
       ip 10.50.9.1
       url http://gateway.zscalerbeta.net/vpntest
 !
+ip access-list ALLOW_ALL
+   10 permit ip any any
+!
 ip routing
 ip routing vrf ATTRACTED-VRF-FROM-UPLINK
 ip routing vrf IT
@@ -435,6 +442,9 @@ ip prefix-list PL-STATIC-VRF-DEFAULT
 !
 ip route 172.16.0.0/16 172.16.5.4
 ip route 66.66.66.0/24 172.17.0.0
+!
+ip nat pool PORT_ONLY_POOL port-only
+   port range 1500 65535
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    description Mark prefixes originated from the LAN
