--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -16,6 +16,10 @@ service routing protocols model multi-agent
 !
 ip as-path access-list ASPATH-WAN permit 65000 any
 !
+!
+ip nat profile VRF-AWARE-NAT
+   ip nat source dynamic access-list ALLOW_ALL pool PORT_ONLY_POOL
+!
 hostname cv-pathfinder-edge1
 !
 router adaptive-virtual-topology
@@ -469,6 +473,9 @@ monitor connectivity
       ip 10.50.9.1
       url http://gateway.zscalerbeta.net/vpntest
 !
+ip access-list ALLOW_ALL
+   10 permit ip any any
+!
 ip routing
 ip routing vrf ATTRACTED-VRF-FROM-UPLINK
 ip routing vrf IT
@@ -479,6 +486,9 @@ ip extcommunity-list ECL-EVPN-SOO permit soo 192.168.42.2:511
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 192.168.42.0/24 eq 32
+!
+ip nat pool PORT_ONLY_POOL port-only
+   port range 1500 65535
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 40
    description Mark prefixes originated from the LAN
