Feat(eos_cli_config_gen): Support SA lifetime for IP sec

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -4656,6 +4656,22 @@ keys:
               type: str
               description: Name of the SA policy. The "null" value is deprecated and
                 will be removed in AVD 5.0.0
+            sa_lifetime:
+              type: dict
+              keys:
+                value:
+                  type: int
+                  description: 'Lifetime value for this SA.
+
+                    Valid range depends on the unit.'
+                unit:
+                  type: str
+                  valid_values:
+                  - gigabytes
+                  - hours
+                  - megabytes
+                  - thousand-packets
+                  default: hours
             esp:
               type: dict
               keys:
