--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/management-security.cfg
@@ -55,7 +55,7 @@ management security
    session shared-secret profile profile1
       secret name0 secret3 infinite
       secret name1 secret1 infinite
-      secret name2 secret2 receive-lifetime 20/12/2024 transmit-lifetime infinite
+      secret name2 secret2 receive-lifetime 12/20/2024 10:00:00 12/20/2025 10:00:00 transmit-lifetime infinite
    session shared-secret profile profile2
       secret name3 secret4 infinite
 !
