--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-vpn-import-pruning.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-evpn-vpn-import-pruning.yml
@@ -33,6 +33,9 @@ router_bgp:
       peer_group: EVPN-OVERLAY-PEERS
   redistribute_routes:
   address_family_evpn:
+    bgp_additional_paths:
+      send:
+        ecmp_limit: 20
     domain_identifier: "65101:0"
     peer_groups:
       - name: EVPN-OVERLAY-PEERS
