--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-evpn.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-v4-evpn.yml
@@ -74,6 +74,9 @@ router_bgp:
     - source_protocol: connected
       route_map: RM-CONN-2-BGP
   address_family_evpn:
+    bgp_additional_paths:
+      send:
+        backup: true
     peer_groups:
       - name: EVPN-OVERLAY-PEERS
         activate: true
