--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -4663,7 +4663,15 @@ keys:
                   type: int
                   description: 'Lifetime value for this SA.
 
-                    Valid range depends on the unit.'
+                    Valid range depends on the unit.
+
+                    <1-24>       Lifetime in hours ( default )
+
+                    <1-4000000>  Packet limit in thousands
+
+                    <1-6000>     Byte limit in GB ( 1024 MB )
+
+                    <1-6144000>  Byte limit in MB ( 1024 KB )'
                 unit:
                   type: str
                   valid_values:
