--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -140,11 +140,13 @@ repos:
             .*\.excalidraw|  # Exclude all .excalidraw files
             .*\.rst|  # Exclude all .rst files
             python-avd/pyavd/vendor/.*|  # Exclude all files in this directory
+            ansible_collections/arista/avd/CHANGELOG.rst| # Exclude auto generated CHANGELOG.rst file
             ansible_collections/arista/avd/changelogs/.*|  # Exclude all files in this directory
             ansible_collections/arista/avd/roles/.*/docs/tables/.*\.md| # Exclude all .md files in tables
             ansible_collections/arista/avd/roles/.*/schemas/.*schema\.yml| # Exclude YAML schemas file
             ansible_collections/arista/avd/roles/.*/schemas/.*jsonschema\.json| # Exclude JSON schemas file
             ansible_collections/arista/avd/plugins/plugin_utils/cv_client/api/.*| # Exclude auto generated files for cv API
+            ansible-avd/ansible_collections/arista/avd/docs/plugins/.* | # Excluded auto generated doc for Ansible plugins
           )$
 
   - repo: local
